--- a/css/style.css
+++ b/css/style.css
@@ -4,21 +4,22 @@
 
 body {
     overflow-x: hidden;
+    background-color: #D9DAD3;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
-h2,
-p {
+h1, h2 {
     text-align: center;
     color: white;
     text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.50);
 }
 
 h1 {
+    position: relative;
+    top: 3vh;
     font-family: "din-condensed", sans-serif;
-    font-size: 5vw;
+    font-size: 6vw;
     font-style: normal;
     font-weight: 400;
     text-transform: uppercase;
@@ -26,97 +27,95 @@ h1 {
 
 h2 {
     position: relative;
+    top: 8vh;
     font-family: "Montserrat", sans-serif;
     font-size: 1.4vw;
     font-weight: 300;
-    top: 3.5vh;
 }
 
 p {
     font-family: "Montserrat", sans-serif;
-    font-size: 1vw;
+    font-size: 1.8vw;
+    color: #3F3F3F;
+    text-align: center;
 }
 
-#container {
-    max-width: 65vw;
-    margin: auto;
+.section {
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
+#section1 {
+    position: relative;
+    top: -1vh;
 }
 
 #background-img {
     z-index: -1;
-    position: fixed;
+    position: absolute;
+    width: 100vw;
+    height: 101vh;
     top: -1vh;
-    background-image: url("../img/forest.jpg");
-    width: 65vw;
-    height: 102vh;
-    filter: blur(3px);
+    background-image: url(../img/background.jpg);
+    background-size: cover;
+    filter: grayscale(0.2);
 }
 
-.screenshot {
-    position: absolute;
-    width: 25vw;
-    top: 25vh;
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.50);
+#screenshot {
+    position: relative;
+    width: 27vw;
+    top: 6vh;
+    left: 36vw;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
-#screenshot-1 {
-    left: 10vw;
+.arrow {
+    position: relative;
+    width: 2.5vw;
+    transition: all 0.4s;
 }
 
-#screenshot-2 {
-    left: 37.5vw;
+.slide-down {
+    
 }
 
-#screenshot-3 {
-    left: 65vw;
+#down {
+    top: 32vh;
+    left: 21.1vw;
+    
 }
 
-.icon {
-    position: absolute;
-    left: 38vw;
+#down:hover {
+    top: 32.5vh;
 }
 
-.icon-text {
-    position: absolute;
-    left: 42vw;
-    max-width: 20vw;
-    text-align: left;
-    font-size: 1.2vw;
+#up {
+    top: 3vh;
+    left: 48.3vw;
 }
 
-#profile {
-    top: 63vh;
-}
-
-#profile-text {
-    top: 61.7vh;
-}
-
-#favorites {
-    width: 4.5vh;
-    top: 71vh;
-}
-
-#favorites-text {
-    top: 68.4vh;
+#up:hover {
+    top: 2.5vh;
 }
 
 .longer-text {
     position: relative;
-    top: 53vh;
-    left: 23vw;
-    max-width: 20vw;
+    max-width: 41vw;
+    top: 27vh;
+    left: 29.5vw;
+}
+
+.download {
+    position: relative;
 }
 
 #app-store {
-    position: relative;
-    top: 48.7vh;
-    left: 0.7vw;
+    top: 38.7vh;
+    left: 39vw;
 }
 
 #google-play {
-    position: relative;
     width: 10.7vw;
-    top: 50vh;
-    left: 44.5vw;
+    top: 40vh;
+    left: 41vw;
 }
